--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".butcher.GenericsButcherShop"
             android:theme="@style/ButcherShopTheme"/>
         <activity android:name=".StoreDirectory"/>
+        <activity android:name=".employeeHandbook.EmployeeView"/>
     </application>
 
 </manifest>
